--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-memmap = "0.7.0"
+memmap2 = "0.5.7"
+#nohash-hasher = "0.2.0"
+ahash = "0.8.0"
 # to format ast prettily
 textwrap = "0.15.0"
